--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
         <!-- 熔断器监控相关 -->
         <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
