--- a/frame-consumers/src/main/resources/config/bootstrap.yml
+++ b/frame-consumers/src/main/resources/config/bootstrap.yml
@@ -1,10 +1,10 @@
-# frame-consumer 配置 git 配置
+# frame-consumers 配置 git 配置
 
 spring:
   cloud:
     config:
       uri: http://localhost:8083/api
-      name: frame-consumer-config
+      name: frame-consumers-config
       label: master
       discovery:
         enabled: true
